--- a/html/checkout.html
+++ b/html/checkout.html
@@ -29,21 +29,21 @@
                         <div>
                             <i class="fa-solid fa-house"></i>
                         </div>
-                        <p>Step 1/3</p>
+                        <p>Step 1 / 3</p>
                     </div>
                     <div class="line"></div>
                     <div class="feature cart">
                         <div>
                             <i class="fa-solid fa-cart-shopping"></i>
                         </div>
-                        <p>Step 1/3</p>
+                        <p>Step 2 / 3</p>
                     </div>
                     <div class="line"></div>
                     <div class="feature checkout">
                         <div>
                             <i class="fa-solid fa-money-check-dollar"></i>
                         </div>
-                        <p>Step 1/3</p>
+                        <p>Step 3 / 3</p>
                     </div>
                 </div>
             </div>
@@ -144,9 +144,7 @@
 
                             <!-- place-order-btn -->
                             <div class="place-order-btn" style="display: flex; justify-content: right;">
-                                <a href="" style="text-decoration: none;">
-                                    <div style="background-color: #ffc107; width: 176px; height: 35px; border-radius: 7px; font-size: 16px; font-weight: 600; color: #2c2c2c; text-transform: uppercase; display: flex; align-items: center; justify-content: center; margin: 10px 8px 20px 8px;">Place Order</div>
-                                </a>
+                                <button>Place Order</button>
                             </div>
                         </div>
                     </div>
