--- a/html/cart.html
+++ b/html/cart.html
@@ -56,7 +56,7 @@
                 <div class="items-list">
                     <!-- product-header -->
                     <div class="items__header" style="height: 65px; background-color: #2c3e50; display: flex;">
-                        <div class="checkbox"><input type="checkbox"></div>
+                        <div class="checkboxx"><input type="checkbox" class="checkbox"></div>
                         <div class="products" style="color: white;">Product (5 items)</div>
                         <div class="classification" style="color: white;">Classification</div>
                         <div class="price" style="color: white;">Price</div>
@@ -66,7 +66,9 @@
                     </div>
                     <!-- products -->
                     <div class="product-detail">
-                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="checkboxx checkbox-item">
+                            <input type="checkbox" class="checkbox">
+                        </div>
                         <div class="products products-item" style="justify-content: space-between;">
                             <div class="image-product">
                                 <img src="../assets/imgs/cart-products/1.png" alt="">
@@ -90,7 +92,7 @@
                         </div>
                     </div>
                     <div class="product-detail">
-                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="checkboxx checkbox-item"><input type="checkbox" class="checkbox"></div>
                         <div class="products products-item" style="justify-content: space-between;">
                             <div class="image-product">
                                 <img src="../assets/imgs/cart-products/2.jpg" alt="">
@@ -114,7 +116,7 @@
                         </div>
                     </div>
                     <div class="product-detail">
-                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="checkboxx checkbox-item"><input type="checkbox" class="checkbox"></div>
                         <div class="products products-item" style="justify-content: space-between;">
                             <div class="image-product">
                                 <img src="../assets/imgs/cart-products/3.png" alt="">
@@ -138,7 +140,7 @@
                         </div>
                     </div>
                     <div class="product-detail">
-                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="checkboxx checkbox-item"><input type="checkbox" class="checkbox"></div>
                         <div class="products products-item" style="justify-content: space-between;">
                             <div class="image-product">
                                 <img src="../assets/imgs/cart-products/4.jpg" alt="">
@@ -162,7 +164,7 @@
                         </div>
                     </div>
                     <div class="product-detail">
-                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="checkboxx checkbox-item"><input type="checkbox" class="checkbox"></div>
                         <div class="products products-item" style="justify-content: space-between;">
                             <div class="image-product">
                                 <img src="../assets/imgs/cart-products/5.jpg" alt="">
