--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -101,10 +101,13 @@
 
                 <!-- ----Product Overview---- -->
                 <div class="product_overview" style="width: 703px; height:628px;">
-                    <div class="available" style="width: 204px; height:81px;">
-                        <p>Stand: LG</p>
-                        <p>Model: OLED42C2PSA</p>
-                        <p>Availability: Only 2 in Stock</p>
+                    <div class="available" style="transform: translateY(-7px); width: 204px; height:81px;">
+                        <p>
+                            <span>Stand</span>: LG</p>
+                        <p>
+                            <span>Model</span>: OLED42C2PSA</p>
+                        <p>
+                            <span>Availability</span>: Only 2 in Stock</p>
                     </div>
 
                     <div class="product_title" style="width: 702px; height:68px; font-size: 29px; font-weight:500;">
@@ -228,13 +231,110 @@
                 <!-- ----The slider----- -->
                 <div class="related_products">
                     <div class="prod">
+                        <div style="width:292px; height:367px; background-color: #F7F7F7; margin:auto; transform: translateY(20px);">
+                            <div style="width: 63px; height: 21px; background-color: black; text-align: center; color: white; border-radius:7px; transform: translate(10px,30px);">
+                                -30%
+                            </div>
+                        </div>
+
+                        <div style="background-color: #F7F7F7; border-radius: 7px; color: black; text-align: center; width: 74px; height: 35px;font-weight: 700; transform: translate(30px,40px);">
+                            <p style="transform: translateY(8px);">LENOVO</p>
+                        </div>
+
+                        <div style="margin: auto; font-size: 16px; font-weight: 700; width: 294px; height:38px; transform: translateY(70px);">
+                            Lenovo IdeaPad 110-1515K Laptop - 15.6’ Intel Core i3 - 1TB HĐ - 4GB RAM...
+                        </div>
+
+                        <div style="transform: translate(30px, 90px);">
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span style="font-weight: 700;">(49)</span>
+                        </div>
                         
                     </div>
                     <div class="prod">
-                        <div style="width:292px; height:367px; background-color: gray; margin:auto; transform: translateY(20px);"></div>
+                        <div style="width:292px; height:367px; background-color: #F7F7F7; margin:auto; transform: translateY(20px);">
+                            <div style="width: 63px; height: 21px; background-color: black; text-align: center; color: white; border-radius:7px; transform: translate(10px,30px);">
+                                -30%
+                            </div>
+                        </div>
+
+                        <div style="background-color: #F7F7F7; border-radius: 7px; color: black; text-align: center; width: 74px; height: 35px;font-weight: 700; transform: translate(30px,40px);">
+                            <p style="transform: translateY(8px);">LENOVO</p>
+                        </div>
+
+                        <div style="margin: auto; font-size: 16px; font-weight: 700; width: 294px; height:38px; transform: translateY(70px);">
+                            Lenovo IdeaPad 110-1515K Laptop - 15.6’ Intel Core i3 - 1TB HĐ - 4GB RAM...
+                        </div>
+
+                        <div style="transform: translate(30px, 90px);">
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span style="font-weight: 700;">(49)</span>
+                        </div>
                     </div>
-                    <div class="prod"></div>
-                    <div class="prod"></div>
+                    <div class="prod">
+                        <div style="width:292px; height:367px; background-color: #F7F7F7; margin:auto; transform: translateY(20px);">
+                            <div style="width: 63px; height: 21px; background-color: black; text-align: center; color: white; border-radius:7px; transform: translate(10px,30px);">
+                                -30%
+                            </div>
+                        </div>
+
+                        <div style="background-color: #F7F7F7; border-radius: 7px; color: black; text-align: center; width: 74px; height: 35px;font-weight: 700; transform: translate(30px,40px);">
+                            <p style="transform: translateY(8px);">LENOVO</p>
+                        </div>
+
+                        <div style="margin: auto; font-size: 16px; font-weight: 700; width: 294px; height:38px; transform: translateY(70px);">
+                            Lenovo IdeaPad 110-1515K Laptop - 15.6’ Intel Core i3 - 1TB HĐ - 4GB RAM...
+                        </div>
+
+                        <div style="transform: translate(30px, 90px);">
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span style="font-weight: 700;">(49)</span>
+                        </div>        
+
+                    </div>
+                    <div class="prod">
+                        <div style="width:292px; height:367px; background-color: #F7F7F7; margin:auto; transform: translateY(20px);">
+                            <div style="width: 63px; height: 21px; background-color: black; text-align: center; color: white; border-radius:7px; transform: translate(10px,30px);">
+                                -30%
+                            </div>
+                        </div>
+
+                        <div style="background-color: #F7F7F7; border-radius: 7px; color: black; text-align: center; width: 74px; height: 35px;font-weight: 700; transform: translate(30px,40px);">
+                            <p style="transform: translateY(8px);">LENOVO</p>
+                        </div>
+
+                        <div style="margin: auto; font-size: 16px; font-weight: 700; width: 294px; height:38px; transform: translateY(70px);">
+                            Lenovo IdeaPad 110-1515K Laptop - 15.6’ Intel Core i3 - 1TB HĐ - 4GB RAM...
+                        </div>
+
+                        <div style="transform: translate(30px, 90px);">
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span class="fa fa-star smaller"></span>
+                            <span style="font-weight: 700;">(49)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide_dot">
+                    <input id="slide-dot-1" type="radio" name="slides" checked>
+                    <input id="slide-dot-1" type="radio" name="slides" checked>
+                    <input id="slide-dot-1" type="radio" name="slides" checked>
+                    <input id="slide-dot-1" type="radio" name="slides" checked>
                 </div>
             </div>
 
